fix(snap): Drop unnecessary usage of the candidate channel of the gnome build snap
It is copied from the gnome-system-monitor snap example, and I forget to revise it.

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -88,7 +88,7 @@ parts:
       craftctl default
       craftctl set version="$(git describe --tag)"
     build-snaps:
-      - gnome-46-2404-sdk/latest/candidate
+      - gnome-46-2404-sdk
     build-packages:
       - libavcodec-dev
       - libavdevice-dev
