don't track plain text files which is used for saving command output
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 
 # Don't track remote-build build logs
 /snapcraft-*.txt
+
+# Don't track plain text files which is used for saving command output
+*.txt
