avoid staging packages provided by the runtime snap
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -103,12 +103,14 @@ parts:
       - adb
       - ffmpeg
       - libasound2
-      - libblas3
       - libglu1-mesa
       - libglut3.12
       - libsdl2-2.0-0
-      - libslang2
-      - libusb-1.0-0
+
+      # Provided by gnome-platform
+      #- libblas3
+      #- libslang2
+      #- libusb-1.0-0
     stage:
       - -usr/lib/*/libcaca++.so*
       - -usr/lib/*/libcjson_utils.so*
