refactor(notices): Allow more notices implementations
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -156,14 +156,14 @@ parts:
       - -bin/sdl2-notice
 
   launchers-notice:
-    source: snap/local/launchers/sdl2-notice
+    source: snap/local/launchers/sdl2-notices
     plugin: nil
     override-build: |
       craftctl default
       mkdir -p "${SNAPCRAFT_PART_INSTALL}/bin"
 
       # NOTE: The lack of quotes around the `pkg-config` command substitution is intentional.
-      gcc -o "${SNAPCRAFT_PART_INSTALL}/bin/sdl2-notice" "${CRAFT_PROJECT_DIR}/snap/local/launchers/sdl2-notice/sdl2-notice.c" $(pkg-config --cflags --libs sdl2 SDL2_ttf)
+      gcc -o "${SNAPCRAFT_PART_INSTALL}/bin/collaborator-change-notice" "${CRAFT_PROJECT_DIR}/snap/local/launchers/sdl2-notices/collaborator-change-notice.c" $(pkg-config --cflags --libs sdl2 SDL2_ttf)
     build-snaps:
       - gnome-46-2404-sdk
     build-packages:
