--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -163,7 +163,10 @@ parts:
       mkdir -p "${SNAPCRAFT_PART_INSTALL}/bin"
 
       # NOTE: The lack of quotes around the `pkg-config` command substitution is intentional.
-      gcc -o "${SNAPCRAFT_PART_INSTALL}/bin/collaborator-change-notice" "${CRAFT_PROJECT_DIR}/snap/local/launchers/sdl2-notices/collaborator-change-notice.c" $(pkg-config --cflags --libs sdl2 SDL2_ttf)
+      gcc \
+        -o "${SNAPCRAFT_PART_INSTALL}/bin/collaborator-change-notice" \
+        "${CRAFT_PROJECT_DIR}/snap/local/launchers/sdl2-notices/collaborator-change-notice.c" \
+        $(pkg-config --cflags --libs sdl2 SDL2_ttf)
     build-snaps:
       - gnome-46-2404-sdk
     build-packages:
