fix(snap): Fix missing gamepad mode support
Fixes #58.

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -43,6 +43,7 @@ apps:
       - audio-record
       - camera
       - home
+      - joystick
       - network
       - network-bind
       - pulseaudio
