fix(snap): Drop libraries provided by the mesa-2404 content snap
This addresses the following Snapcraft warnings:

```text
Lint warnings:
- library: libdrm_amdgpu.so.1: unused library 'usr/lib/x86_64-linux-gnu/libdrm_amdgpu.so.1.125.0'. (https://documentation.ubuntu.com/snapcraft/stable/how-to/debugging/use-the-library-linter)
- library: libdrm_intel.so.1: unused library 'usr/lib/x86_64-linux-gnu/libdrm_intel.so.1.125.0'. (https://documentation.ubuntu.com/snapcraft/stable/how-to/debugging/use-the-library-linter)
- library: libgallium-25.2.8-0ubuntu0.24.04.1.so: unused library 'usr/lib/x86_64-linux-gnu/libgallium-25.2.8-0ubuntu0.24.04.1.so'. (https://documentation.ubuntu.com/snapcraft/stable/how-to/debugging/u
se-the-library-linter)
```

For some reason they aren't stripped by the cleanup part...

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -166,6 +166,11 @@ parts:
       - -usr/lib/*/libzvbi-chains.so*
       - -usr/share/fonts
 
+      # Provided by the mesa-2404 content snap
+      - -usr/lib/*/libdrm_amdgpu.so*
+      - -usr/lib/*/libdrm_intel.so*
+      - -usr/lib/*/libgallium-*.so*
+
   # Launcher programs to fix problems at runtime
   launchers:
     source: snap/local/launchers
@@ -209,6 +214,11 @@ parts:
       - -usr/lib/*/libicutu.so*
       - -usr/lib/*/libicutest.so*
       - -usr/lib/*/libpulse-simple.so*
+
+      # Provided by the mesa-2404 content snap
+      - -usr/lib/*/libdrm_amdgpu.so*
+      - -usr/lib/*/libdrm_intel.so*
+      - -usr/lib/*/libgallium-*.so*
 
   cleanup:
     after:
