Revert "fix(snap/apps/adb): Drop unnecessary gnome-platform item from LD_LIBRARY_PATH"
This addresses the following runtime error:

```text
$ scrcpy.adb kill-server
/snap/scrcpy/x7/usr/bin/adb: error while loading shared libraries: libprotobuf.so.32: cannot open shared object file: No such file or directory
```

This reverts commit a8f7f32cd8c96c1d9d95bc41eb5a945614eaabe5.

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -72,7 +72,9 @@ apps:
   adb:
     command: usr/bin/adb
     environment:
-      LD_LIBRARY_PATH: ${SNAP}/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/android:${LD_LIBRARY_PATH}
+      # NOTE: The gnome-platform content snap entry provides libprotobuf
+      # required by the adb binary.
+      LD_LIBRARY_PATH: ${SNAP}/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/android:${SNAP}/gnome-platform/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}:${LD_LIBRARY_PATH}
     plugs:
       - network-bind
       - raw-usb
