fix(snap): Fix missing metadata fields
This addresses the following Snapcraft linter outputs:

```text
Lint warnings:
- metadata: Metadata field 'contact' is missing or empty. (https://documentation.ubuntu.com/snapcraft/stable/reference/project-file/snapcraft-yaml/#contact)
Lint information:
- metadata: Metadata field 'issues' is missing or empty. (https://documentation.ubuntu.com/snapcraft/stable/reference/project-file/snapcraft-yaml/#issues)
- metadata: Metadata field 'source-code' is missing or empty. (https://documentation.ubuntu.com/snapcraft/stable/reference/project-file/snapcraft-yaml/#source-code)
- metadata: Metadata field 'website' is missing or empty. (https://documentation.ubuntu.com/snapcraft/stable/reference/project-file/snapcraft-yaml/#website)
```

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,6 +7,10 @@ description: |
   This is an unofficial scrcpy distribution.  Please report any issues to the snap's own issue tracker: https://github.com/sisco311/scrcpy-snap/issues
 
   The source code of scrcpy itself can be found at: https://github.com/Genymobile/scrcpy
+contact: https://github.com/sisco311/scrcpy-snap/issues
+issues: https://github.com/sisco311/scrcpy-snap/issues
+source-code: https://github.com/sisco311/scrcpy-snap
+website: https://github.com/sisco311/scrcpy-snap
 
 license: Apache-2.0
 grade: stable
