fix(snap): Add back descriptive comments regarding the disabled build-packages that are provided by the FFmpeg SDK content snap
For reference purposes.

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -130,6 +130,13 @@ parts:
       - pkg-config
       - meson
       - ninja-build
+
+      # Provided by the FFmpeg SDK content snap
+      #- libavcodec-dev
+      #- libavdevice-dev
+      #- libavformat-dev
+      #- libavutil-dev
+      #- libswresample-dev
     override-build: "${CRAFT_PROJECT_DIR}/snap/local/scriptlets/build-scrcpy.sh"
     stage-packages:
       - libasound2
