--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -261,7 +261,7 @@ parts:
     override-prime: |
       set -eu
 
-      for snap in core24 ffmpeg-2404 mesa-2404; do
+      for snap in core24 mesa-2404; do
         if ! "${CRAFT_PROJECT_DIR}/snap/local/scriptlets/drop-content-snap-duplicate-files.sh" "${snap}"; then
           printf \
               'Error: Unable to drop the duplicate files in the snap installation directory "%s".\n' \
