fix(snap): Add workaround for canonical/snapcraft#6054
This fixes the following non-fatal error:

```text
libpxbackend-1.0.so: cannot open shared object file: No such file or directory
Failed to load module: $SNAP_USER_COMMON/.cache/gio-modules/libgiolibproxy.so
```

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -84,6 +84,13 @@ apps:
       - raw-usb
 
 layout:
+  # WORKAROUND:
+  # libproxy.so.1 (from gnome-46-2404) has a hardcoded RUNPATH of
+  # /usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/libproxy for loading
+  # libpxbackend-1.0.so.  Map it so the dynamic linker can resolve it.
+  # https://github.com/canonical/snapcraft/pull/6054
+  /usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/libproxy:
+    symlink: $SNAP/gnome-platform/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/libproxy
   /usr/local/share/icons:
     symlink: $SNAP/usr/local/share/icons
   /usr/local/share/scrcpy:
