docs(snap): Add descriptive comments regarding the usage of each confinement interfaces.
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -47,16 +47,34 @@ apps:
     environment: &scrcpy-env
       LD_LIBRARY_PATH: ${SNAP}/ffmpeg-platform/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}:${SNAP}/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/android:${LD_LIBRARY_PATH}
     plugs: &scrcpy-plugs
+      # For running the Android Debug Bridge (adb) and
+      # connecting the Android devices over USB or TCP/IP.
+      # https://github.com/Genymobile/scrcpy/blob/master/doc/connection.md
       - adb-support
-      - alsa
-      - audio-playback
-      - camera
-      - home
-      - joystick
       - network
       - network-bind
-      - pulseaudio
       - raw-usb
+
+      # For audio forwarding functionality
+      # https://github.com/Genymobile/scrcpy/blob/master/doc/audio.md
+      - alsa
+      - audio-playback
+      - pulseaudio
+
+      # For v4l2 emulation support
+      # https://github.com/Genymobile/scrcpy/blob/master/doc/v4l2.md
+      - camera
+
+      # For video & audio recording support
+      # https://github.com/Genymobile/scrcpy/blob/master/doc/recording.md
+      - home
+
+      # For gamepad simulation support
+      # https://github.com/Genymobile/scrcpy/blob/master/doc/gamepad.md
+      - joystick
+
+      # Legacy desktop support.
+      # https://github.com/canonical/snapd/blob/master/interfaces/builtin/unity7.go
       - unity7
     extensions:
       - gnome
