fix(snap): Fix missing removable-media access
Users might want to save their recordings there.

Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -68,6 +68,7 @@ apps:
       # For video & audio recording support
       # https://github.com/Genymobile/scrcpy/blob/master/doc/recording.md
       - home
+      - removable-media
 
       # For gamepad simulation support
       # https://github.com/Genymobile/scrcpy/blob/master/doc/gamepad.md
