fix(snap): Fix missing plug declaration for the adb app.
Signed-off-by: 林博仁(Buo-ren Lin) <buo.ren.lin@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -96,6 +96,8 @@ apps:
     environment:
       LD_LIBRARY_PATH: ${SNAP}/usr/lib/${CRAFT_ARCH_TRIPLET_BUILD_FOR}/android:${LD_LIBRARY_PATH}
     plugs:
+      - adb-support
+      - network
       - network-bind
       - raw-usb
 
